--- a/index.html
+++ b/index.html
@@ -1,72 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-      }
-      header,
-      main,
-      footer {
-        padding: 20px;
-        text-align: center;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: 10px auto;
-      }
-      ul {
-        list-style-type: square;
-        padding-left: 40px;
-        text-align: left;
-      }
-      a {
-        color: blue;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
-  </head>
+  <head> </head>
   <body>
     <header>
-      <h1>Welcome to My Semantic HTML Page</h1>
+      <h1>Welcome to My HTML Page</h1>
     </header>
 
     <main>
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Easy to read and navigate</li>
-          <li>Accessible structure</li>
-          <li>Responsive design</li>
+          <li>Justin Bieber</li>
+          <li>Alex Benjamin</li>
+          <li>Rin</li>
         </ul>
       </section>
-
+      <a href="https://youtu.be/33Uh-uNb5Oc?si=qTGo8kZvaI1ILVY5"><h3>Music</h3></a>
       <section>
         <h2>Gallery</h2>
-        <img src="./images/image1.jpg" alt=" Image 1"/>
-        <img src="./images/image2.jpg" alt=" Image 2"/>
+        <img src="./images/image1.jpg" alt=" Image 1" />
+        <img src="./images/image2.jpg" alt=" Image 2" />
         <img src="./images/image3.jpg" alt=" Image 3" />
       </section>
-
-      <section>
-        <h2>Learn More</h2>
-        <p>
-          Check out this <a href="https://www.w3schools.com/" target="_blank">HTML tutorial</a> to learn more about
-          building web pages.
-        </p>
-      </section>
+      <ul>
+        <li>Nothing</li>
+        <li>To</li>
+        <li>See much</li>
+      </ul>
     </main>
 
     <footer>
-      <p>&copy; 2025 My Semantic HTML Page</p>
+      <p>&copy; 2025 My HTML Page</p>
     </footer>
   </body>
 </html>
