--- a/index.html
+++ b/index.html
@@ -1,34 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> </head>
+  <head>
+    <title>Page1</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
   <body>
     <header>
-      <h1>Welcome to My HTML Page</h1>
+      <h1>Welcome to My Page</h1>
     </header>
 
-    <main>
-      <section>
-        <h2>Features</h2>
-        <ul>
-          <li>Justin Bieber</li>
-          <li>Alex Benjamin</li>
-          <li>Rin</li>
-        </ul>
-      </section>
-      <a href="https://youtu.be/33Uh-uNb5Oc?si=qTGo8kZvaI1ILVY5"><h3>Music</h3></a>
-      <section>
-        <h2>Gallery</h2>
-        <img src="./images/image1.jpg" alt=" Image 1" />
-        <img src="./images/image2.jpg" alt=" Image 2" />
-        <img src="./images/image3.jpg" alt=" Image 3" />
-      </section>
-      <ul>
-        <li>Nothing</li>
-        <li>To</li>
-        <li>See much</li>
-      </ul>
-    </main>
+    <a href="#main-content" class="skip-link">Skip to Main Content</a>
 
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="page1.html">Gallery</a>
+      <a href="page2.html">Contact</a>
+    </nav>
+
+    <p>
+      The blue sky with fluffy clouds floats slowly above me from the east, bringing a sense of peace to my heart. Its
+      beauty is breathtaking and can make anyone fall in love with it. However, deep down, I know that my life is about
+      to change in a way that I cannot predict. Or was it just a dream I had last night while sleeping on a hard, rocky
+      bed? Although I cannot remember anything specific about the dream, I can still feel the emotions it brought. I
+      would like to know if it will get any new experiences.
+    </p>
+
+    <p>
+      A new day begins, and I am still sleepy from sleep. I splash cool water on my face, hoping it will shake off the
+      remnants of my dreams and my stomach starts growling. Smelling juicy grilled meat. Closing my eyes for a moment, I
+      take a deep breath and let the scent guide me. The best way to kick off a beautiful morning, I think to myself, is
+      definitely indulging in some leftover lunch from Mike – those savory bites always seem to brighten my day.
+    </p>
+    <p>
+      While eating, I scroll the map, thinking of our last path which is from our hometown. We are going to a small city
+      to buy some essentials.
+    </p>
+    <p>"Hey, Mike! Come here I got something for you" I yelled out to Mike.</p>
+
+    <p>
+      Mike is My childhood friend, we are both from Firel, a small town in the South of Pooter. I couldn't wait to show
+      him my plan. Mike and I always had a special bond, and he's someone I could share anything with. He was a genius
+      with his inventions, and his latest creation, called A Cor, was truly remarkable. It was a small box with four
+      rollers outside and was powered by water. It was more convenient than a horse and took us on a weeks-long journey.
+      The only downside was that it produced a quiet shaking that made it hard to fall asleep. Despite this, He's a bit
+      eccentric, but that's just part of his charm. Standing tall at 1.75m, he always dressed for comfort rather than
+      style.
+    </p>
+
+    <p>He looked at me with confusion and asked, "What?" "Come here!" I yelled.</p>
+
+    <p>
+      Despite his confusion, he approached me. I threw him a map that I had bought at the market on the way to the
+      Santinento City forest.
+    </p>
+
+    <div id="main-content" class="container">
+      <img src="images/image4.jpg" alt="Sample Image 1" />
+      <img src="images/image5.webp" alt="Sample Image 2" />
+      <img src="images/image6.webp" alt="Sample Image 3" />
+      <img src="images/image7.webp" alt="Sample Image 4" />
+      <img src="images/image3.jpg" alt="Sample Image 4" />
+    </div>
     <footer>
       <p>&copy; 2025 My HTML Page</p>
     </footer>
